--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
             <div class="row justify-content-center text-center fs-5">
               <div class="col-md">
-                <p>Sejak Tahun 2022 Saya Bekerja Sebagai Adminstrasi Officer Di Salah Satu Perusahaan Kepala Sawit Hingga Saat Ini. Sebelumnya saya pernah bekerja sebagai supervisi di perusahaan yang bergerak pada industri yang sama</p>
+                <p>Sejak Tahun 2022 Saya Bekerja Sebagai Administrasi Officer Di Salah Satu Perusahaan Kepala Sawit Hingga Saat Ini. Sebelumnya saya pernah bekerja sebagai supervisi di perusahaan yang bergerak pada industri yang sama</p>
               </div>
                <div class="col-md"> <p>Saya ahli dalam menggunakan Sistem SAP-ECC & SAP 4Hana, Diluar itu saya sering mengerjakan projects di luar pekerjaan saya, Seperti membuat Aplikasi Berbasis Website Maupun Dekstop, Saya Juga Hobby dalam Fotografer maupun Videografer kemudian Saya Edit menjadi sebuah Video Dokumenter maupun Cinematik. Saya juga tertarik dalam dunia Desain Grafis</p></div>
             </div>
